--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <title>Multi Step Form</title>
+    <title>Cricket Score Board</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
